fix: refresh summary config not showing

--- a/frontend/src/components/SeedlotRegistrationSteps/ParentTreeStep/styles.scss
+++ b/frontend/src/components/SeedlotRegistrationSteps/ParentTreeStep/styles.scss
@@ -264,7 +264,6 @@
   .table-pagination {
     z-index: 2;
     position: relative;
-    padding-bottom: 2rem;
   }
 
   .#{vars.$bcgov-prefix}--data-table-content {
